--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Actividad_1_Grupo03</string>
+    <string name="app_name">MyMusic</string>
+    <string name="album_title">Álbum</string>
+    <string name="albums_title">Álbumes</string>
+    <string name="search_title">Buscar</string>
 </resources>
